<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ui_for_debug_and_demo</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="leowu102000@gmail.com">leowu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>robot_server_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>tm_msgs</build_depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_server_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>tm_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
