<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ui_for_debug_and_demo</name>
  <version>1.1.0</version>
  <description>TM DEMO GUI (ui_for_debug_and_demo) is a Qt-based framework used to quickly start connection debugging tools.</description>
  <maintainer email="leo.wu@tm-robot.com">leowu</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/TechmanRobotInc/tmr_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>robot_server_msgs</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>tm_msgs</build_depend>


  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>robot_server_msgs</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>tm_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
